# 2023_kutorkin_SLAE

./: .gitignore  CMakeLists.txt  README.md
Tridiagonal_matrix/: CMakeLists.txt  Tridiagonal_matrix.cpp  Tridiagonal_matrix_algorithm.cpp
Tridiagonal_matrix/src/: CMakeLists.txt  Tridiagonal_matrix.cpp  Tridiagonal_matrix_algorithm.cpp
Tridiagonal_matrix/tests/: CMakeLists.txt  test.cpp  test_1.cpp
